# CourseWork

./: .env_sample  .gitignore  README.md  pyproject.toml  results.json
src/: main.py  new.json  reports.py  results.json  services.py  user_settings.json  utils.py  views.py
tests/: test_reports.py  test_services.py  test_views.py
